--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node app.js"
   },
+  "engines": {
+    "node": ">= 0.8.0"
+  },
   "dependencies": {
     "express": "3.3.5",
     "hjs": "*"
