--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "install" : "node app.js", 
     "start": "node app.js"
   },
   "engines": {
